<resources>

    <string name="app_name">MicasaApp</string>
    <string name="privacy_policy">privacy_policy</string>
    <string name="email">Email</string>
    <string name="api_key">AIzaSyBduv61ywGy3e9mU6NJ_a7GHCf5oSbxT2w</string>
    <string name="pass">Password</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="confirm">Confirm</string>
    <string name="signup">Register</string>
    <string name="please_turn_on_your_gps_to_find_nout_better_restaurant_suggestion_nnear_you">Please turn on your GPS to find\nout better items suggestion\nnear you.</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="hi_john_nwelcome_to">,\nWelcome to</string>
    <string name="skip">Skip</string>
    <string name="start_selling">Start Selling</string>
    <string name="i_m_just_browsing">I\'m just browsing</string>
    <string name="sell_your_items_and_turn_it_into_cash">Sell your Items and turn it\ninto cash</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="_14256489">sasasa</string>
    <string name="view_all">View All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="uesr_list">User List</string>
    <string name="demo_text">Demo text</string>
    <string name="in_men_s_fashion">In Men\'s Fashion</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="getting_this">Getting This</string>
    <string name="meet_this">Meet This</string>
    <string name="stage_47_605_w_47th_street_manhattan_n10036_3_5_km_nearby">Stage 47 605 W 47th Street, Manhattan,\n10036 3.5 km nearby</string>
    <string name="share_the_seller">Share Product</string>
    <string name="chat">Chat</string>
    <string name="meet_the_seller">Meet The Seller</string>
    <string name="today">Today</string>
    <string name="hi_olivia_parker">Hi, Olivia Parker</string>
    <string name="_5_min_ago">5 min ago</string>
    <string name="_1_min_ago">1 min ago</string>
    <string name="search">Search</string>
    <string name="make_offer">Make Offer</string>
    <string name="maths">Demo this is test text..</string>
    <string name="category">Category</string>
    <string name="sub_cat">SubCategory</string>
    <string name="condition">Condition</string>
    <string name="add_title">Add Title</string>
    <string name="add_description">Add Description</string>
    <string name="save_add">Publish</string>
    <string name="Add">Add</string>
    <string name="sell">Sell Item</string>
    <string name="follow">Follow</string>
    <string name="select_language">Select Language</string>
    <string name="update">Update</string>
    <string name="server_not_available">Server error</string>
    <string name="msg_noInternet">Internet Connection Not Available</string>
    <string name="on_error">On error</string>

    <string name="not_available">Not available</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_upload_image">Please upload image.</string>
    <string name="my_items">My Items</string>
    <string name="items_for_sale">ITEMS FOR SELL</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="service">Service</string>
    <string name="add_a_profile_photo">Add a profile photo</string>
    <string name="change_language">Change Language</string>
    <string name="termsofservice"><![CDATA[<font color=#000000>By signing up, You agree our</font> <font color=#ef7c0c>Terms of\nServices</font>]]></string>
    <string name="enter_name">Please enter name.</string>
    <string name="enter_email">Please enter email.</string>
    <string name="enter_address">Please enter address.</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="please_enter_pass">Please enter password.</string>
    <string name="please_enter_message">Please enter message.</string>
    <string name="please_enter_confirm_pass">Please enter Confirm password.</string>
    <string name="pass_and_confirm_pass_not_macthed">Password and confirm password is not matched.</string>
    <string name="next">Next</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="other">Other</string>
    <string name="privacy_policy1">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="notification">Notification</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="explore_f5">Explore F5</string>
    <string name="_3_days">3 Days</string>
    <string name="hand_trowel">Hand trowel.</string>
    <string name="s_130_new">S$ 130 New</string>
    <string name="_9v38_f6_singapore">9V38+F6 Singapore</string>
    <string name="in_all_category">In: All Category</string>
    <string name="filter">Filter By Category</string>
    <string name="sure_delete_item">Do you really want to delete item.?</string>
    <string name="delete_item">Delete Item</string>
    <string name="no_rating_yet">No rating yet</string>
    <string name="chat_request">Chat Request</string>
    <string name="send_request_to_seller_for_chat">Send request to seller for chat</string>
    <string name="send_request">Send Request</string>
    <string name="type_a_message">Type a message</string>
    <string name="default_notification_channel_id">1</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="request_accepted">Request accepted</string>
    <string name="request_declined">Request declined</string>
    <string name="product_detail">Product Detail</string>
    <string name="update_item">Update Item</string>
    <string name="search_ite">Search Item</string>
    <string name="please_enter_offer_money">Please enter offer money</string>
    <string name="rejected">Reject</string>
    <string name="accept_chat_request">You accepted chat request.</string>
    <string name="you_accepted">You accepted </string>
    <string name="offer_request"> offer request.</string>
    <string name="chat_request_accepted">Chat Request Accepted</string>
    <string name="yor">Your </string>
    <string name="is_accept">offer is accepted.</string>
    <string name="product">Product :</string>
    <string name="like">Like</string>
    <string name="add_item">Add Item For Sale </string>
    <string name="share_using">Share Using</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="change_password">Change Password?</string>
    <string name="change_pass">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_pass">New Password</string>
    <string name="submit">Submit</string>
    <string name="please_enter_old_pass">Please enter old password.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="password_mismatched">Please make sure your password match.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="status">Status</string>
    <string name="select_status">Please select status.</string>
    <string name="ente_price">Please Enter Price.</string>
    <string name="enter_title">Please Enter Title.</string>
    <string name="enter_desc">Please Enter Description.</string>
    <string name="on_gps">Please turn on GPS</string>
    <string name="permisson_denied">Permission denied</string>
    <string name="permission_denied_boo"> permission denied, boo! Disable the functionality that depends on this permission.</string>
    <string name="all_categories">All Categories</string>
    <string name="verified">Verified</string>
    <string name="item_details">Item Details</string>
    <string name="edit_item">Edit Item</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="gps_on_successfully">Gps on successfully</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="signin_with_facebook">SignIn with Facebook</string>
    <string name="make_money_while_freeing_up_space">Make money, While freeing up space</string>
    <string name="sell_and_declutter">Sell and Declutter</string>
    <string name="terms_and_condition_and_privacy_policy">Terms and condition and Privacy Policy</string>
    <string name="logged_in_successfull">Logged in successfully</string>
    <string name="you_have_enteed">You have entered wrong Email and Password.</string>
    <string name="categories">Categories</string>
    <string name="latest_products">Latest Products</string>
    <string name="seller">Seller</string>
    <string name="Buyer">Buyer</string>
    <string name="Chat">Chat</string>
    <string name="select_a_category">Select a Category</string>
    <string name="forgot_password">Forgot Password</string>

    <string-array name="select_status">
        <item>Choose status</item>
        <item>Brand New</item>
        <item>New</item>
        <item>Very Good</item>
        <item>Good</item>
        <item>Used</item>
    </string-array>

</resources>
