<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChangLangFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include android:id="@+id/layout_lang"
            layout="@layout/layou_header"/>

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/select_language"
            android:textColor="@color/black"

            android:textStyle="normal"
            android:textSize="@dimen/_12sdp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/josefin_sans"
                android:layoutDirection="rtl"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hindi"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:visibility="gone"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/josefin_sans"
                android:layoutDirection="rtl"/>

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spanish"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/josefin_sans"
                android:layoutDirection="rtl"/>


        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/chang_lang"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_45sdp"
            app:backgroundTint="@color/purple_700"
            app:rippleColor="@color/white"
            app:cornerRadius="@dimen/_10sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:elevation="@dimen/_3sdp"
            android:fontFamily="@font/josefin_sans"
            android:textAllCaps="false"
            android:visibility="gone"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />



    </LinearLayout>

</RelativeLayout>
</layout>