<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginOptionActivity">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="@dimen/_20sdp"
        android:layout_gravity="end"
        android:fontFamily="@font/josefin_sans_semibold"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/micasa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/josefin_sans_semibold"
            android:text="@string/sell_and_declutter"
            android:textColor="@color/black"
            android:textSize="@dimen/_21sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:layout_margin="@dimen/_16sdp"
            android:text="@string/make_money_while_freeing_up_space"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_16sdp" />




        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginRight="@dimen/_20sdp"
            app:cardElevation="5dp"
            android:clickable="true"
            app:cardMaxElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardBackgroundColor="#f24236"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:id="@+id/rls_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:adjustViewBounds="true"
                    android:padding="2dp"
                    android:layout_centerVertical="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/google" />


                <TextView
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/signin_with_google"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/_20sdp"
            app:cardBackgroundColor="#3280ee"
            app:cardPreventCornerOverlap="true"
            app:cardMaxElevation="5dp"
            android:clickable="true"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:id="@+id/rls_facbook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:adjustViewBounds="true"
                    android:layout_centerVertical="true"
                    android:padding="4dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fb" />



                <TextView
                    android:id="@+id/btnFacebookSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/signin_with_facebook"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/createId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans"
            android:layout_margin="@dimen/_20sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_16sdp" />


    </LinearLayout>

    <TextView
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:layout_margin="@dimen/_20sdp"
        android:layout_gravity="bottom|center"
        android:gravity="bottom"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:visibility="gone"
        android:textStyle="normal"
        android:textSize="@dimen/_16sdp" />


</LinearLayout>