<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChangePasswordFragment"
    android:orientation="vertical"
    >

    <include
        android:id="@+id/layout_itemaction"
        layout="@layout/layou_header"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_Pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColorHint="@color/colorGray">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:fontFamily="@font/josefin_sans"
            android:inputType="textPassword"
            android:textColor="@color/purple_500" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="@color/colorGray">

        <EditText
            android:id="@+id/etConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/josefin_sans"
            android:inputType="textPassword"
            android:textColor="@color/purple_500" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="@color/colorGray">

        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:fontFamily="@font/josefin_sans"
            android:inputType="textPassword"
            android:textColor="@color/purple_500" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:backgroundTint="@color/purple_700"
        app:rippleColor="@color/white"
        app:cornerRadius="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:elevation="@dimen/_3sdp"
        android:outlineProvider="background"
        android:fontFamily="@font/josefin_sans"
        android:layout_marginTop="@dimen/_35sdp"
        android:textAllCaps="false"
        android:outlineSpotShadowColor="@color/purple_200"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

</LinearLayout>
</layout>